--- a/mi_cv.html
+++ b/mi_cv.html
@@ -27,8 +27,11 @@
   <header>
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" style="
-      box-shadow: 0 -1px 10px 0 rgba(0,0,0,.75);
-      border-radius: 5px;">
+    box-shadow: 0 -1px 10px 0 rgba(0,0,0,.75);
+    border-radius: 5px;
+    max-width: 900px;
+    margin: auto;
+    ">
 
       <a class="navbar-brand" href="#">Leketo</a>
       <div class="collapse navbar-collapse" id="navbarCollapse">
